# student_datahub

./: .gitignore  Cargo.toml  README.md  THIRD-PARTY-LICENCES  TODO.md  data.db  scheme.drawio
migrations/2025-01-24-170028_crear_tablas/: down.sql  up.sql
migrations/2025-02-26-093943_add_unique_to_subjects/: down.sql  up.sql
src/: db_connection_handler.rs  error_handler.rs  interpreter.rs  main.rs  models.rs  schema.rs  status.rs  usage.rs
src/commands/: mod.rs
src/commands/entry/: add.rs  mod.rs  set.rs  substract.rs  unit_test.rs  usage.rs
src/commands/export/: mod.rs  usage.rs
src/commands/export/csv_export/: mod.rs  unit_test.rs  write_daily.rs  write_monthly.rs  write_weekly.rs
src/commands/plan/: list.rs  mod.rs  modify.rs  start.rs
src/commands/status/: daily_summary.rs  mod.rs  period_details.rs  weekly_summary.rs
src/commands/subject/: add.rs  list.rs  mark.rs  mod.rs  modify.rs  remove.rs  usage.rs
src/entry/: add.rs  interpreter.rs  mod.rs  set.rs  substract.rs  usage.rs
src/export/: csv.rs  mod.rs  usage.rs
src/export/csv_export/: mod.rs  write_daily.rs  write_monthly.rs  write_weekly.rs
src/models/: entry.rs  mod.rs  period.rs  subject.rs
src/plan/: interpreter.rs  list.rs  mod.rs  modify.rs  period.rs  remove.rs  start.rs  status.rs  subject.rs  usage.rs
src/status/: daily_summary.rs  mod.rs  period_details.rs  weekly_summary.rs
src/subject/: add.rs  interpreter.rs  list.rs  mark.rs  mod.rs  modify.rs  remove.rs  usage.rs
src/tests/: mod.rs
