[package]
name = "student_datahub"
version = "0.1.0"
edition = "2021"
authors = ["Javier Albero <splashling1789@gmail.com>"]
description = "A command-line tool that lets you register your study time for later data-analysis"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Splashling1789/student_datahub"
keywords = ["college", "student", "study", "highschool"]
categories = ["command-line-utilities", "data-structures"]

[dependencies]
diesel = {version = "2.2.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"]}
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
colored = "3.0.0"
csv = "1.3.1"
terminal_size = "0.4.2"